Agregamos un header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="./imagenes/174854.png">
 </head>
 <body>
+    <header>
+        <h1>HTML Y PYTHON</h1>
+        <p> Esta pagina explica las etiquetas de HTML y el codigo de PYTHON</p>
+    </header>
     
 </body>
 </html>
