agregamos section HTML

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         <h1>HTML Y PYTHON</h1>
         <p> Esta pagina explica las etiquetas de HTML y el codigo de PYTHON</p>
     </header>
+
+    <main>
+        <section>
+            <h2>1. HTML</h2>
+            <P>
+                HTML (Hypertext Markup Language) es un lenguaje de marcado que se utiliza para estructurar y mostrar páginas web. Es el componente básico de la web y el lenguaje estándar para crear y diseñar sitios web. 
+            </P>
+            <img src="./imagenes/html-grenade.webp" alt="imagen de lenguaje HTML">
+        </section>
+    </main>
     
 </body>
 </html>
