--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
             </P>
             <img src="./imagenes/html-grenade.webp" alt="imagen de lenguaje HTML">
         </section>
+
+        <section>
+            <h2>2. python</h2>
+            <p>
+                Python es un lenguaje de programación de alto nivel, interpretado y de código abierto, conocido por su sintaxis clara y legible, que se asemeja al lenguaje natural, lo que facilita su aprendizaje y uso. 
+            </p>
+            <img src="./imagenes/1-50.png" alt="imagen de lenguaje python">
+        </section>
+
+    <article>
+        <h2>3. codigo de python</h2>
+        <h3>def holamundo():</h3>
+        <h3>print("hola mundo !")</h3>
+    </article>
     </main>
     
 </body>
